# timicc-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/timicc_worker/: __init__.py  core.py  jobs.py  server.py
tests/: mcp_smoke.py  test_core.py  test_jobs.py
