[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-timicc-worker"
version = "0.3.0"
description = "A local, patch-only TIMI CC MCP worker for coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6,<2",
    "platformdirs>=4,<5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/prelearn-code/timicc-mcp"
Issues = "https://github.com/prelearn-code/timicc-mcp/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8"]

[project.scripts]
timicc-mcp = "timicc_worker.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
